Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/WrongTarget2.out
WrongTarget2.java:12:6: compiler.err.annotation.type.not.applicable
1 error
